refator(sidebar): Reserve space for vertical sccrollbar to prevent layout jumps

--- a/projects/hslayers/components/sidebar/sidebar.component.scss
+++ b/projects/hslayers/components/sidebar/sidebar.component.scss
@@ -163,6 +163,7 @@ hs-mini-sidebar .hs-sidebar-item-title {
 }
 
 hs-sidebar~div.hs-panelplace {
+    scrollbar-gutter: stable;
     overflow-x: hidden;
 }
 
